# Kyron

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  NOTICE  README.md  SETUP.md  alembic.ini  pyproject.toml  workflow_orchestration_engine_spec.md
.github/workflows/: docs.yml  verify.yml
auth-service/: Dockerfile  package-lock.json  package.json  tsconfig.json
auth-service/src/: server.ts
backend/: Dockerfile  __init__.py  approval_policy_defaults.py  config.py  dependencies.py  entrypoint.sh  lifecycle.py  logging_config.py  main.py
backend/api/: admin_routes.py  auth_routes.py  credential_routes.py  health_routes.py  metrics_routes.py  project_routes.py  run_routes.py  webhook_routes.py  workflow_routes.py
backend/auth/: __init__.py  authorization.py  dependencies.py
backend/db/: __init__.py  database.py  models.py  statuses.py
backend/engine/: __init__.py  cancellation.py  conditions.py  context.py  coordinator.py  output_paths.py  process_registry.py  process_runner.py  resume.py  scheduler.py  snapshot.py  task_registry.py  validation.py  waves.py
backend/integrations/: __init__.py  code_host.py  git_credentials.py  git_manager.py  github_client.py  github_webhooks.py  gitlab_client.py  (+2 more)
deploy/: Caddy.Dockerfile  Caddyfile  docker-compose.yml
docs/: IMPLEMENTATION_PLAN.md  acceptance.md  api.md  architecture.md  code-host-provider-spec.md  decisions.md  index.md  operations.md  package-lock.json  package.json  workflow-json-authoring-spec.md
frontend/: index.html  package-lock.json  package.json
scripts/: verify.sh
(+138 files in other folders)
