[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyron-workflow-engine"
version = "1.0a0"
description = "Trusted-internal Git workflow orchestration engine"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=24.1,<25",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "cryptography>=44,<46",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "types-aiofiles>=24.1,<25",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S106"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
exclude = ["backend/db/migrations"]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/db/migrations/*", "backend/tests/*"]
